ProjectB/route.yaml
#
# Copyright Super iPaaS Integration LLC, an IBM Company 2024
#
kind: Route
apiVersion: api.webmethods.io/beta
metadata:
  name: my-default-routing
  version: 1.0
  namespace: dev
  tags:
    - routing
    - route
    - policy
spec:
  loadbalance-endpoints:
    - $ref: dev:default_endpoint:1.0
      suspend-on-duration: 40s
    - $ref:  dev:endpoint_sample:1.0
      suspend-on-duration: 40s
